# nom-vn

./: .codespellignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.vi.md  package.json  plan.md  pnpm-lock.yaml  pyproject.toml  wrangler.jsonc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  desktop-build.yml  docs.yml  publish.yml
benchmarks/: README.md
benchmarks/accuracy/: README.md  _summarize_diacritic_grid.py  bench_convert_documents.py  bench_convert_documents_v2.py  bench_convert_ocr.py  bench_diacritic_hf.py  bench_diacritic_hf_udvtb.py  bench_diacritic_llm_udvtb.py  bench_diacritics.py  bench_features_e2e.py  bench_ocr.py  bench_ocr_engines.py  bench_ocr_engines_printed.py  bench_ocr_post_correct.py  bench_ocr_post_correct_real.py  bench_ocr_real.py  bench_pipeline.py  bench_segment.py  bench_spell_correction_hf.py  bench_spell_correction_real.py  register_phobert_base_baseline.json  run_diacritic_local_grid.sh  spell_correction_real_baseline.json  stt_speech_massive_baseline.json  summarize_wiki_vi_baseline.json  vintern_ocr_clean_baseline.json  vintern_ocr_noisy_baseline.json
benchmarks/data/: README.md  _fetch_all.py  diacritic_eval_v0.txt
benchmarks/perf/: bench_chunking.py  bench_diacritic_batch.py  bench_embeddings.py  bench_pdf_extract.py  bench_retrieve.py  bench_schemas.py  bench_text.py
benchmarks/rag/: README.md  bench_bm25_compare.py  bench_embedder_compare.py  bench_rag_vn.py  run_grid.sh
benchmarks/results/: baseline_bge_reranker_bkai_zalo5k.json  baseline_chunking_v0.0.4.json  baseline_convert_documents.json  baseline_convert_documents_v2.json  baseline_convert_ocr.json  baseline_convert_ocr_smoke.json  baseline_diacritic_batch_speedup.json  baseline_diacritic_claude_haiku_4_5.json  baseline_diacritic_gemma3_4b.json  baseline_diacritic_gemma3_4b_tatoeba.json  baseline_diacritic_gemma3_4b_udhr.json  baseline_diacritic_gemma3_4b_udvtb.json  baseline_diacritic_gemma4_e4b_tatoeba.json  baseline_diacritic_gemma4_e4b_udhr.json  baseline_diacritic_gemma4_e4b_udvtb.json  baseline_diacritic_gpt4omini_tatoeba.json  baseline_diacritic_gpt4omini_udhr.json  baseline_diacritic_gpt4omini_udvtb.json  baseline_diacritic_gpt54mini_tatoeba.json  baseline_diacritic_gpt54mini_udhr.json  baseline_diacritic_gpt54mini_udvtb.json  baseline_diacritic_gpt54nano_tatoeba.json  baseline_diacritic_gpt54nano_udhr.json  baseline_diacritic_gpt54nano_udvtb.json  baseline_diacritic_gpt_5_4_mini.json  baseline_diacritic_gpt_5_4_nano.json  baseline_diacritic_haiku45_tatoeba.json  baseline_diacritic_haiku45_udhr.json  baseline_diacritic_haiku45_udvtb.json  baseline_diacritic_onnx_cpu.json  baseline_diacritic_phi4-mini_latest_tatoeba.json  baseline_diacritic_phi4-mini_latest_udhr.json  baseline_diacritic_qthuan_bartpho_business55.json  baseline_diacritic_qthuan_vit5_business55.json  baseline_diacritic_qwen3_1.7b.json  baseline_diacritic_qwen3_8b_tatoeba.json  baseline_diacritic_qwen3_8b_udhr.json  baseline_diacritic_qwen3_8b_udvtb.json  baseline_diacritic_toshiiiii_4register.json  baseline_diacritic_toshiiiii_t5.json  (+64 more)
benchmarks/translation/: README.md  bench_translation_flores.py
desktop/: README.md  nom-app.spec
docker/otel/: README.md  docker-compose.yml  verify_traces.py
docs/: ARCHITECTURE.md  BENCHMARK.md  PIPELINE.md  README.md  architecture.md  benchmark.md  datasets.md  index.md  oss_landscape_2026q2.md  pipeline.md  readme.md  recipes.md  release.md  sota_vn_2026q2.md  sota_vn_2026q2_expansion.md  training_plan_2026q2.md
docs/.vitepress/: config.ts
docs/compliance/: index.md  luat-134-2025.md
docs/doanh-nghiep/: index.md  so-sanh-oss-ee.md
docs/en/: index.md  models.md  quickstart.md
docs/integrations/: README.md  adk.md  langchain.md  pydantic_ai.md
docs/public/: CNAME
docs/tasks/: _template.md  agents.md  compliance.md  convert.md  diacritic-restoration.md  embedding.md  handwriting.md  index.md  jobs.md  mcp.md  models.md  ner.md  nlp.md  ocr.md  pdf-extraction.md  rag.md  register.md  reranker.md  spell-correction.md  stt.md  summarize.md  text-normalization.md  translate.md  word-segmentation.md
docs/vi/: index.md  models.md  quickstart.md
examples/: nlp_demo.py  recipes_demo.py
scripts/: _bench_post_correct.py  _bench_vietocr_real.py  ban_manager_classes.sh  build_ui.sh  capture_screenshots.py  e2e_persistence.py  e2e_smoke.py  mirror_models_to_hf.py  publish_hf_datasets.py  publish_ood_eval_to_hf.py  publish_register_classifier.py  publish_vn_documents_ocr.py  publish_vn_documents_ocr_v2.py  queue_v229_chain.sh  seed_demo.py  smoke_cloud_llms.py  smoke_pypi_wheel.py  summarize_ood_bench.py  upload_bench_to_hf.py
src/nom/: __init__.py
tests/: _fakes.py  test_agent_recipes.py  test_agents.py  test_agents_api.py  test_bench_helpers.py  test_bgjobs.py  test_chat.py  test_chat_server_spa.py  test_chunking.py  test_classify_register.py  test_cli_mcp.py  test_cli_translate_convert.py  test_compliance_api.py  test_compliance_audit.py  test_compliance_dossier.py  test_compliance_incident.py  test_compliance_integration.py  test_compliance_laws.py  test_compliance_risk.py  test_compliance_transparency.py  test_compliance_wrappers.py  test_convert.py  test_data_pipelines.py  test_embeddings.py  test_format_fidelity.py  test_jobs.py  test_jobs_api.py  test_llm.py  test_mcp.py  test_mcp_integrations.py  test_models_api.py  test_multi_space.py  test_nlp.py  test_nlp_ner_legal.py  test_noise.py  test_normalize.py  test_ocr_handwriting.py  test_office_pipelines.py  test_pipeline.py  test_platform_auth.py  (+18 more)
training/: _chain_v229.sh
training/diacritic/: README.md  eval_checkpoint.py  launch_genpc2.sh  launch_remote_train.sh  post_train.sh  prep_data.py  prep_data_legal.py  train.py  (+2 more)
ui/: .prettierignore  .prettierrc.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
(+372 files in other folders)
