[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nom-vn"
version = "0.2.15"
description = "Open-source Python toolkit for building Vietnamese AI applications."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Viet-Anh Nguyen", email = "contact@nrl.ai" },
  { name = "Neural Research Lab" },
]
keywords = ["vietnamese", "nlp", "ocr", "llm", "ai", "nôm", "tiếng việt"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: Vietnamese",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = [
  # Pydantic v2 powers nom.doc.schemas + Validate stage. Apache-licensed
  # via pydantic-core (Rust). It's a small, well-audited core dep.
  "pydantic>=2.5",
  # bm25s (MIT, scipy.sparse) is the BM25 backend for nom.retrieve.
  # Verified 607x faster than the prior pure-Python implementation on
  # the full Zalo Legal QA corpus with bit-identical recall@1/@10.
  # See benchmarks/results/bm25_compare__zalo_full.json.
  "bm25s>=0.2",
  "scipy>=1.10",
]

[project.optional-dependencies]
# Vietnamese embeddings via sentence-transformers (Apache 2.0).
#
# Security audit (2026-04-25): sentence-transformers loads HuggingFace
# models in safetensors format — deterministic, not pickle. The library
# itself is Apache 2.0 and a thin wrapper over HF transformers (also
# Apache 2.0). Default VN model: dangvantuan/vietnamese-embedding
# (Apache 2.0, ~440 MB on disk, 768-dim, top public VN STS at its size).
embeddings = [
  "sentence-transformers>=3.0",
  "numpy>=1.26",
]
# Stronger Vietnamese tokenization via underthesea (Apache 2.0).
#
# Security audit (2026-04-25): underthesea ships CRFsuite native binary
# models (`lCRF...` magic header) — deterministic deserialization, not
# Python pickle. License is Apache 2.0, compatible with our redistribution.
# We attribute upstream in the NOTICE file. The pure-Python `nom.text`
# default path stays dep-free; this extra is opt-in for users who want
# the higher accuracy (~80% per public benchmarks).
#
# We rejected PyVi (MIT) on two counts: (1) bundled .pkl files = arbitrary
# code execution risk on load; (2) runtime KeyError on common input.
nlp = [
  "underthesea>=9.0",
]
# Off-the-shelf VN diacritic-restoration model (HF seq2seq).
# Default: Toshiiiii1/Vietnamese_diacritics_restoration_5th — Apache 2.0,
# safetensors, 200 M T5. Measured 97.81 % word accuracy + 148 ms p50 on
# our public 55-sentence corpus, beating cloud gpt-4o-mini (95.4 %) and
# local gemma4:e4b (93.2 %). See docs/benchmark.md for the bench grid.
#
# transformers<5 pinned because >=5.6 has a slow-T5-tokenizer regression
# that breaks the Toshiiiii1 model load. Revisit when upstream patches.
"diacritic-hf" = [
  "transformers<5",
  "torch>=2.0",
  "sentencepiece>=0.1.99",
]
# Backwards-compatible alias.
diacritics = [
  "transformers<5",
  "torch>=2.0",
  "sentencepiece>=0.1.99",
]
# The deployable web app (FastAPI + minimal HTML UI in v0.2.0; React +
# ShadCN dist shipped pre-built in v0.2.1).
#
# `nom serve` is meant to be one-command-from-fresh: the user expects
# upload → ask to work without surprise import errors. So this extra
# bundles the runtime stack (LLM client, embedder, doc parsers) too.
chat = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "python-multipart>=0.0.9",  # for file uploads via UploadFile
  "httpx>=0.27",  # Ollama HTTP client (also pulled by [llm])
  "sentence-transformers>=3.0",  # default VN embedder (also pulled by [embeddings])
  "numpy>=1.26",
  # `nom serve` is meant to be one-command-from-fresh: every supported
  # upload format must parse out of the box. Pull the full Office +
  # OCR + PDF stack into [chat] so users don't have to remember [doc].
  "pdfplumber>=0.11",
  "pytesseract>=0.3.10",
  "pillow>=10",
  "python-docx>=1.1",
  "openpyxl>=3.1",
  "python-pptx>=1.0",
]
doc = [
  # Core parser surface for nom.doc.Pipeline. All MIT/Apache 2.0/BSD-3,
  # safetensors/zip+xml/png — no pickled assets (CLAUDE.md principle 11).
  "pytesseract>=0.3.10",     # OCR via Tesseract
  "pdfplumber>=0.11",        # PDF text + tables (MIT)
  "pypdfium2>=4.30",         # fast PDF text extraction (BSD-3 wrapper over PDFium Apache-2.0).
                             # 46x faster than pdfplumber on text-only paths
                             # (benchmarks/perf/bench_pdf_extract.py); kept
                             # alongside pdfplumber because pdfplumber is still
                             # the better choice for table extraction. We do not
                             # ship PyMuPDF — its AGPL license is incompatible
                             # with our Apache-2.0 default.
  "pillow>=10",              # image I/O
  "python-docx>=1.1",        # .docx parser (MIT, pure Python over zip+xml)
  "openpyxl>=3.1",           # .xlsx parser (MIT, pure Python)
  "python-pptx>=1.0",        # .pptx parser (MIT, pure Python)
  # pydantic is a hard dep now (above) — listed here too for explicitness
  # if a user installs only [doc] expecting full doc-extraction.
  "pydantic>=2.5",
]
llm = [
  "httpx>=0.27",
]
otel = [
  # OpenTelemetry — optional. Activates when OTEL_* env vars are set.
  # Speaks the OpenInference semantic conventions so traces flow to
  # Phoenix / Langfuse / Arize / Datadog / any OTel collector unchanged.
  "opentelemetry-api>=1.28",
  "opentelemetry-sdk>=1.28",
  "opentelemetry-exporter-otlp>=1.28",
  "opentelemetry-instrumentation-fastapi>=0.49b0",
]
all = [
  "nom-vn[chat,diacritics,doc,embeddings,llm,otel]",
]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.7",
  # Test deps — match the runtime [llm] / [doc] extras so we can exercise
  # the Ollama adapter, Parse stage, and OCR stage with real types
  # (not just stubs). pytesseract is the Python wrapper; the Tesseract
  # binary is system-installed (apt install tesseract-ocr tesseract-ocr-vie).
  "httpx>=0.27",
  "pdfplumber>=0.11",
  "pytesseract>=0.3.10",
  "pillow>=10",
  "python-docx>=1.1",
  "openpyxl>=3.1",
  "python-pptx>=1.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "python-multipart>=0.0.9",
]

[project.scripts]
nom = "nom.chat.cli:main"

[project.urls]
Homepage = "https://nrl.ai/nom"
Repository = "https://github.com/nrl-ai/nom-vn"
Documentation = "https://nrl.ai/nom"
Issues = "https://github.com/nrl-ai/nom-vn/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/nom"]
# Force-include the React UI bundle that scripts/build_ui.sh stages
# under src/nom/chat/ui_dist/. The dir is in .gitignore (it's a build
# artifact), so without force-include hatch's wheel target skips it.
# When ui_dist is absent at build time the build fails with a clear
# message — guarantees a wheel never ships without the UI.
[tool.hatch.build.targets.wheel.force-include]
"src/nom/chat/ui_dist" = "nom/chat/ui_dist"

[tool.hatch.build.targets.sdist]
include = [
  "src/",
  "tests/",
  "benchmarks/",
  "ui/",
  "docs/",
  "README.md",
  "README.vi.md",
  "CHANGELOG.md",
  "CONTRIBUTING.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "benchmarks", "scripts"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # Pyflakes
  "I",    # isort
  "N",    # pep8-naming
  "UP",   # pyupgrade
  "B",    # bugbear
  "A",    # builtins
  "C4",   # comprehensions
  "PIE",  # misc lints
  "PT",   # pytest style
  "RET",  # return statements
  "SIM",  # simplify
  "TID",  # tidy imports
  "PTH",  # use pathlib
  "RUF",  # ruff-specific
]
ignore = [
  "E501",   # line length is enforced by formatter
  "B008",   # FastAPI / typer use this pattern legitimately
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]  # test method naming flexibility
"benchmarks/**" = ["T201"]      # print() is fine in benchmarks
"scripts/**" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["nom"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/nom"]
exclude = ["tests/", "benchmarks/", "scripts/"]

[[tool.mypy.overrides]]
module = [
  "pytesseract.*",
  "pdfplumber.*",
  "fitz.*",
  "underthesea.*",
  "sentence_transformers.*",
  "openpyxl.*",
  "docx.*",
  "pptx.*",
  "opentelemetry.*",
]
ignore_missing_imports = true
